<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/jwt_dialog_deviceId_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text=""/>

    <TextView
        android:id="@+id/jwt_dialog_wait"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/otp_dialog_wait"
        android:gravity="center"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/jwt_try_again_button"
        android:text="@string/try_again"
        android:visibility="gone"/>


    <Button
        android:id="@+id/jwt_dialog_close_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/otp_dialog_close_text" />




</LinearLayout>